16683
Consider this code:

{code}
trait A { def hi = "A" }
trait B { def hi = "B" }
class C extends A with B
{code}

It results in the following compiler error message:

{code}
<console>:9: error: overriding method hi in trait A of type => String;
 method hi in trait B of type => String needs `override' modifier
       class C extends A with B
             ^
{code}

The problem is that 

 - the solution suggested does not work in most cases, because A and B need to be in some inheritance relationship for it to work:
{code}
scala> trait B { override def hi = "B" }
<console>:7: error: method hi overrides nothing
       trait B { override def hi = "B" }
                              ^
{code}

 - the possibility to use override in C is not mentioned at all:
{code}
class C extends A with B {
  override def hi = "C"
}
{code}

Maybe it is possible to improve this message.
